brat/test/golden/error/fanin-diff-types.brat
f(Qubit, Bit) -o Vec(Qubit, 2)
f = { [\/] }
