brat/test/golden/error/fanin-diff-types.brat.golden
Error in test/golden/error/fanin-diff-types.brat on line 2:
f = { [\/] }
      ^^^^

  Type mismatch when checking [\/]
Expected: Qubit
But got:  Bit


